--- a/.github/workflows/dev-deploy.yaml
+++ b/.github/workflows/dev-deploy.yaml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Validate bundle
         run: databricks bundle validate
+        working-directory: ./Databricks
         env:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
@@ -36,6 +37,7 @@ jobs:
 
       - name: Deploy bundle
         run: databricks bundle deploy
+        working-directory: ./Databricks
         env:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
