--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,33 +1,47 @@
 # syntax=docker/dockerfile:1
 FROM mcr.microsoft.com/devcontainers/base:jammy
 
-################################################################################
-# Build‑time args                                                               #
-################################################################################
 ARG LOCAL_USER=vscode
 ENV LOCAL_USER=${LOCAL_USER}
 
-################################################################################
-# System packages (as root)                                                     #
-################################################################################
+###############################################################################
+# 1. System packages (root)                                                   #
+###############################################################################
 USER root
-RUN apt-get update && apt-get install -y \
-    git python3 python3-pip python3-setuptools \
-    curl pipx build-essential zip \
- && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && \
+    apt-get install -y \
+        python3 \
+        git \
+        curl \
+        build-essential \
+        ca-certificates \
+        zip \
+    && rm -rf /var/lib/apt/lists/*
 
-################################################################################
-# Switch back to the unprivileged vscode user                                   #
-################################################################################
+###############################################################################
+# 2. Add the uv binary (distroless copy, pinned)                              #
+###############################################################################
+# Copies 2 tiny statically linked binaries: /uv and /uvx                     #
+COPY --from=ghcr.io/astral-sh/uv:0.7.6 /uv /uvx /usr/local/bin/
+
+###############################################################################
+# 3. Regular user setup                                                       #
+###############################################################################
 USER vscode
-ENV PATH="/home/vscode/.local/bin:${PATH}" 
 WORKDIR /app
+ENV PATH="/home/vscode/.local/bin:${PATH}"
+ENV UV_SYSTEM_PYTHON=1
 
-################################################################################
-# Copy only what each step needs (better cache)                                 #
-################################################################################
-COPY --chown=vscode:vscode requirements.txt /tmp/requirements.txt
-RUN pip install --user -r /tmp/requirements.txt
+###############################################################################
+# 4. Dependency layer (best-cache-practice)                                   #
+###############################################################################
+COPY --chown=vscode:vscode pyproject.toml uv.lock ./
+RUN --mount=type=cache,target=/home/vscode/.cache/uv \
+    uv sync --system --frozen
+
+###############################################################################
+# 5. Application code                                                         #
+###############################################################################
 
 COPY --chown=vscode:vscode . /app
 
@@ -36,9 +50,7 @@ COPY --chown=vscode:vscode . /app
 ################################################################################
 RUN git config --global credential.useHttpPath true \
  && git config --global user.email "${LOCAL_USER}@gmail.com" \
- && git config --global user.name  "${LOCAL_USER}" \
- && git init \
- && pre-commit install
+ && git config --global user.name  "${LOCAL_USER}"
 
 ################################################################################
 # Databricks CLI                                                                #
