--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]          # ← add this if uv didn't create it
-requires = ["uv>=0.7"]
-build-backend = "uv.build"
-
 [project]
 name            = "data-engineering-databricks"
 version         = "0.1.0"
@@ -15,14 +11,57 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "pre-commit>=4.2",
-    "black>=25.1",
-    "ruff>=0.11",
+    "pre-commit==4.2.0",
+    "black",
+    "pytest",
+    "ruff",
+    "isort",
 ]
 
-# (optional) tool configs
-[tool.black]
-line-length = 100
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+
+[tool.hatch.build]
+include = [
+    "*.py",
+    "src/*.py",
+]
 
 [tool.ruff]
-line-length = 100
+# Same as Black.
+line-length = 90
+# Assume Python 3.10
+target-version = "py310"
+
+# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
+select = ["E", "F", "I001"]
+ignore = ["F821", "E402"]
+
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    ".git",
+    "__pycache__",
+    "build",
+    "dist",
+    "setup.py",
+]
+
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+
+[tool.black]
+line-length = 90
+target-version = ["py310"]
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
