--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme          = "README.md"
 requires-python = ">=3.10"
 
 dependencies = [
+    "databricks-connect==15.4.*",
     "databricks-sdk>=0.49",
 ]
 
