--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,12 +5,11 @@ FROM mcr.microsoft.com/devcontainers/base:jammy
 # Build‑time args                                                               #
 ################################################################################
 ARG LOCAL_USER=vscode
-ENV LOCAL_USER=${LOCAL_USER}
 
 ################################################################################
 # System packages (as root)                                                     #
 ################################################################################
-USER root
+
 RUN apt-get update && apt-get install -y \
     git python3 python3-pip python3-setuptools \
     curl pipx build-essential zip \
@@ -19,26 +18,21 @@ RUN apt-get update && apt-get install -y \
 ################################################################################
 # Switch back to the unprivileged vscode user                                   #
 ################################################################################
-USER vscode
-ENV PATH="/home/vscode/.local/bin:${PATH}" 
 WORKDIR /app
 
 ################################################################################
 # Copy only what each step needs (better cache)                                 #
 ################################################################################
-COPY --chown=vscode:vscode requirements.txt /tmp/requirements.txt
-RUN pip install --user -r /tmp/requirements.txt
-
-COPY --chown=vscode:vscode . /app
-
+COPY . /app
+RUN pip install -r requirements.txt
 ################################################################################
 # Git + pre‑commit                                                              #
 ################################################################################
-RUN git config --global credential.useHttpPath true \
- && git config --global user.email "${LOCAL_USER}@gmail.com" \
- && git config --global user.name  "${LOCAL_USER}" \
- && git init \
- && pre-commit install
+RUN git config --system credential.useHttpPath true \
+ && git config --system user.email "${LOCAL_USER}@gmail.com" \
+ && git config --system user.name  "${LOCAL_USER}"
+
+RUN pre-commit install --allow-missing-config
 
 ################################################################################
 # Databricks CLI                                                                #
